--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@ h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 24px;
     background-color: rgb(255, 255, 255);
-    color: hsl(0,0%,0%);
+    color: hsla(0,0%,0%,0.6);
 }
 
 a {
     font-style: oblique;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: black;
-    color: aqua;
+    background-color: rgb(242, 243, 209);
+    color: rgb(8, 36, 36);
+    padding: 5px 5px 5px 5px;
+    display: block;
+    font-size: 16px;
 }
